--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@reduxjs/toolkit": "^1.6.1",
     "classnames": "^2.2.6",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-redux": "^7.1.0",
+    "react-redux": "^7.2.5",
     "react-scripts": "3.4.0",
-    "redux": "^4.0.1",
+    "redux": "^4.1.1",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
@@ -28,5 +30,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.7.0"
   }
 }
