--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^7.2.5",
     "react-scripts": "3.4.0",
     "redux": "^4.1.1",
+    "redux-infinite-scroll": "^1.0.9",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
